# WHACK25_BH

./: README.md  claimChecker.py  claimCheckerDEFAULT.py  claimCheckerGoogle.py  pyproject.toml  twitterAPICode.py  twitterFetcher.py
AIGenerationCheck/: main.py  summaryidea.txt
backend/: TwitterBotDetection  TwitterBotDetector.joblib  claimCheckerDEFAULT.py  image-classifier.py  imageClassiferDetector.py  my_model.joblib  twitterAPICode.py  twitterBotDetection.py
frontend/: app.py
frontend/static/: imageClassifierStyles.css  site.css  style.css
frontend/templates/: bot-detector.html  claim-checker.html  image-classifier.html  index.html  layout.html  template.html
