[project]
name = "whack25-bh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "factverifai>=0.1.8",
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "langchain-community>=0.4",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
